<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Roomee</string>
    <string name="action_settings">Settings</string>
    <string name="action_submit">Submit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_refresh">Refresh list</string>
    <string name="action_new_meeting">New meeting</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_list_room">Roomee</string>
    <string name="title_list_all_room">All</string>
    <string name="title_list_free_room">Free</string>
    <string name="room_status_icon_free_content_description">Icon for free room</string>
    <string name="room_status_icon_unavailable_content_description">Icon for unavailable room</string>
    <string name="no_room_list">No rooms available</string>
    <string name="no_meeting_list">No meetings in this room</string>
    <string name="title_activity_detail_room">DetailRoomActivity</string>
    <string name="arrow_icon">arrow icon</string>
    <string name="availability_icon">availability icon</string>
    <string name="api_key_hint">API key</string>
    <string name="submitButton">Submit</string>
    <string name="status">status</string>
    <string name="success">success</string>
    <string name="data">data</string>
    <string name="authenticating_">Authenticating&#8230;</string>
    <string name="message">message</string>
    <string name="getting_room_list">Getting room list&#8230;</string>
    <string name="error">Error</string>
    <string name="free_for_">"Free for "</string>
    <string name="busy_for_">"Busy for "</string>
    <string name="getting_room_details_">Getting room details&#8230;</string>
    <string name="room_object_tag">room</string>
    <string name="room_id_tag">id</string>
    <string name="room_name_tag">name</string>
    <string name="room_freebusy_tag">freebusy</string>
    <string name="room_time_tag">time</string>
    <string name="meetings_array_tag">meetings</string>
    <string name="meeting_summary_tag">summary</string>
    <string name="meeting_description_tag">description</string>
    <string name="meeting_creator_tag">creator</string>
    <string name="meeting_start_tag">start</string>
    <string name="meeting_end_tag">end</string>
    <string name="meeting_date_tag">date</string>
    <string name="title_activity_new_meeting">New Meeting</string>
    <string name="summary_edit_text_hint">Summary</string>
    <string name="description_edit_text_hint">Description</string>
    <string name="start_time_text_view">FROM</string>
    <string name="end_time_text_view">TO</string>
    <string name="date_selection_text_view">Date</string>
    <string name="timepicker_fragment_tag">timePicker</string>
    <string name="datepicker_fragment_tag">datePicker</string>
    <string name="creating_new_meeting_">Creating new meeting&#8230;</string>
    <string name="no_internet_connection_error_text">No internet connection</string>
    <string name="server_cannot_be_reached_error_text">Server cannot be reached</string>
    <string name="time_clashes_error_message">Time selected clashes with other meeting</string>
    
    

</resources>